--- a/README.org
+++ b/README.org
@@ -32,6 +32,13 @@ its content.
 
 ** February 2022
 
+*** 15-Feb-22
++ [[https://www.isa-afp.org/entries/VYDRA_MDL.html][Multi-head monitoring of metric dynamic logic (in Isabelle/HOL)]]. ~ Martin Raszyk. #ITP #IsabelleHOL
++ [[https://arxiv.org/abs/2202.05959][Formalization of a stochastic approximation theorem]]. ~ Koundinya Vajjha, Barry Trager, Avraham Shinnar, Vasily Pestun. #ITP #Coq #Math
++ [[https://luctielen.com/posts/analyses_are_arrows/][Analyses are arrows]]. ~ Luc Tielen (@luctielen). #Haskell #FunctionalProgramming
++ [[https://blog.cofree.coffee/2022-02-14-how-to-design-a-chat-bot/][How to design a chat bot]]. #Haskell #FunctionalProgramming
++ [[https://www.uibk.ac.at/mathematik/algebra/staff/fritz-tobias/ct2021_course_projects/category_theory.pdf][Monads in Computer Science]]. ~ Christina Kohl, Christina Schwaiger. #Haskell #FunctionalProgramming #CategoryTheory
+
 *** 14-Feb-22
 + [[https://arxiv.org/abs/2202.05360][Formalized functional analysis with semilinear maps]]. ~ Frédéric Dupuis, Robert Y. Lewis, Heather Macbeth. #ITP #LeanProver #Math
 + [[https://arxiv.org/abs/2004.00055][Explosive proofs of mathematical truths]]. ~ Scott Viteri, Simon DeDeo. #ITP #Coq #Math H/T: @LogicPractice
