--- a/README.org
+++ b/README.org
@@ -33,6 +33,9 @@ its content.
 
 ** March 2022
 
+*** 06-Mar-22
++ [[https://bit.ly/3ChzBFP][Fantasmas en Matemáticas]]. ~ Juan Arias de Reyna. #Matemáticas
+
 *** 05-Mar-22
 + [[https://lmcs.episciences.org/9148/pdf][Verified approximation algorithms]]. ~ Robin Eßmann, Tobias Nipkow, Simon Robillard, Ujkan Sulejmani. #ITP #IsabelleHOL
 + [[https://research.chalmers.se/publication/528615/file/528615_Fulltext.pdf][Theory exploration for programs and proofs]]. ~ Sólrún Halla Einarsdóttir. #ITP #IsabelleHOL #Haskell #FunctionalProgramming
